--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
     background-color: aliceblue;
+    background-image: url('https://images.pexels.com/photos/1542495/pexels-photo-1542495.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
 }
 
 
@@ -43,7 +44,7 @@ form {
     background-color: black;
     color: aliceblue;
     font-weight: normal;
-
+    
 }
 
 #sub {
@@ -52,10 +53,9 @@ form {
 }
 
 #forecastDiv {
+    /* flex-direction: column; */
     display: flex;
     overflow-x: scroll;
-    /* flex-direction: column; */
-
 }
 
 
@@ -66,6 +66,10 @@ form {
     width: 190px;
     margin: 15px;
     padding: 50px;
-
+    
+    
+}
+#scroll{
+    display: flex;
 
 }
